--- a/style.scss
+++ b/style.scss
@@ -2,6 +2,10 @@
     margin: 0;
     padding: 0;
 }
+.center {
+    padding-left: calc(50% - 600px);
+    padding-right: calc(50% - 600px);
+  }
 body{
     font-family: "Montserrat", sans-serif;
 }
@@ -127,7 +131,6 @@ b{
     width: 247px;
     }
     &__stripe{
-    width: 1900px;
     height: 90px;
     box-sizing: border-box;
     border: 1px solid rgba(255, 255, 255, 0.2);
