--- a/style.scss
+++ b/style.scss
@@ -157,8 +157,8 @@ b{
     height: 1600px;
     background: rgb(32, 32, 39);
     &__content{
-    width: 1201px;
-    height: 1326px;
+    padding-top: 100px;
+    padding-bottom: 100px;
     }
     &__head{
     width: 1201px;
