--- a/style.css
+++ b/style.css
@@ -134,7 +134,6 @@ b {
   width: 247px;
 }
 .gov__stripe {
-  width: 1440px;
   height: 90px;
   box-sizing: border-box;
   border: 1px solid rgba(255, 255, 255, 0.2);
@@ -164,11 +163,10 @@ b {
   background: rgb(32, 32, 39);
 }
 .about__content {
-  width: 1201px;
-  height: 1326px;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 .about__head {
-  width: 1201px;
   height: 198px;
   display: flex;
   flex-wrap: wrap;
